--- a/index.html
+++ b/index.html
@@ -386,37 +386,63 @@
         </section>
         <!-- //BLOG -->
 
-         <!-- CONTACT -->
-         <section id="contact" class="full_height px-lg-5">
+        <!-- CONTACT -->
+        <section id="contact" class="full_height px-lg-5">
             <div class="container">
-                <div class="row pb-8 justify-content-center text-align-center pb-4" data-aos="fade-up">
-                    <div class="col-lg-8">
-                        <h6 class="text-brand">CONTACT</h6>
-                        <h1>Interested in working together? Let's talk</h1>
+
+                <div class="row justify-content-center text-center">
+                    <div class="col-lg-8 pb-4" data-aos="fade-up">
+                        <h1 class="text-brand">CONTACT</h1>
+                        <h1>Interested in working together? Let's talk.</h1>
                     </div>
 
-                    <div class="col-lg-8">
+                    <div class="col-lg-8" data-aos="fade-up" data-aos-delay="300">
                         <form action="#" class="row g-lg-3 gy-3">
                             <div class="form-group col-md-6">
-                                <input type="text" class="form-conrol" placeholder="Enter your name">
+                                <input type="text" name="name" id="" class="form-control" placeholder="Enter your name">
                             </div>
 
                             <div class="form-group col-md-6">
-                                <input type="email" class="form-conrol" placeholder="Enter your email">
+                                <input type="email" name="email" id="" class="form-control" placeholder="Enter your email">
                             </div>
 
                             <div class="form-group col-12">
-                                <input type="text" class="form-conrol" placeholder="Enter your subject">
+                                <input type="text" name="subject" id="" class="form-control" placeholder="Enter your subject">
                             </div>
 
                             <div class="form-group col-12">
-                                <textarea name="" class="form-control" id="" cols="4" rows="10">Enter your message</textarea>
+                                <textarea name="" id="" cols="" class="form-control" rows="4">Enter your message</textarea>
+                            </div>
+
+                            <div class="form-group col-12 d-grid">
+                                <button type="submit" class="btn btn-brand">Submit</button>
                             </div>
                         </form>
                     </div>
                 </div>
             </div>
         </section>
+        <!-- //CONTACT -->
+
+        <!-- FOOTER -->
+        <footer class="py-5 px-lg-5">
+            <div class="container">
+                <div class="row gy-4 justify-content-between">
+                    <div class="col-auto">
+                        <p class="mb-0">Copyright text given</p>
+                    </div>
+                    <div class="col-auto">
+                        <div class="social-icons">
+                            <a href="#" class="lab la-twitter"></a>
+                            <a href="#" class="lab la-instagram"></a>
+                            <a href="#" class="lab la-facebook"></a>
+                            <a href="#" class="lab la-github"></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
+        <!-- //FOOTER -->
     </div>
     <!-- //CONTENT WRAPPER -->
 
