--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<!-- 
+    I learnt this from this video -> https://www.youtube.com/watch?v=3e8p0R5-b5A
+    Thanks a lot, SA7MAN
+ -->
+
 <!DOCTYPE html>
 <html lang="en">
 
